// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen audio import --help] should print import usage: import usage 1`] = `
Object {
  "stderr": "",
  "stdout": "Usage: import [-?] inputFile
Import audio files in ARM
      inputFile               Input audio description file.
  -?, -h, --help              Show this help message.
",
}
`;

exports[`[mutagen audio import] message type and description should be optional: export of the imported files 1`] = `
Object {
  "stderr": "",
  "stdout": "/tmp/mutagen/test/import/import_minimalist_test/10/import_minimalist_test message name 1.wav
/tmp/mutagen/test/import/import_minimalist_test/10/import_minimalist_test message name 2.wav
",
}
`;

exports[`[mutagen audio import] message type and description should be optional: number of messages imported 1`] = `
Object {
  "stderr": "",
  "stdout": "Imported 2 messages.
",
}
`;

exports[`[mutagen audio import] message type and description should be optional: re-export of the csv file 1`] = `
Object {
  "stderr": "",
  "stdout": "name,type,description,messageArId,tenantId,10,11
\\"import_minimalist_test message name 1\\",ANNOUNCEMENT,,<removed-for-testing-purposes>,1,\\"10/import_minimalist_test message name 1.wav\\",
\\"import_minimalist_test message name 2\\",ANNOUNCEMENT,,<removed-for-testing-purposes>,1,\\"10/import_minimalist_test message name 2.wav\\",
",
}
`;

exports[`[mutagen audio import] should fail when file to import does not exist: no such file or directory 1`] = `
Object {
  "stderr": "/tmp/foo (No such file or directory)
",
  "stdout": "",
}
`;

exports[`[mutagen audio import] should fail when file to import is not a valid CSV: invalid csv 1`] = `
Object {
  "stderr": "Invalid input file.
",
  "stdout": "",
}
`;

exports[`[mutagen audio import] should fail when some audio files are missing: missing audio files 1`] = `
Object {
  "stderr": "Audio import failed: the following audio files don't exist
/usr/src/app/tests/resources/audio/import/11/MISSING AUDIO FILE.wav
",
  "stdout": "",
}
`;

exports[`[mutagen audio import] should fail when the csv file references invalid personality: missing personality 1`] = `
Object {
  "stderr": "Audio import failed: the following personalities don't exist
12
",
  "stdout": "",
}
`;

exports[`[mutagen audio import] should import messages and audio files: export of the imported files 1`] = `
Object {
  "stderr": "",
  "stdout": "/tmp/mutagen/test/import/import_test/10/import_test message name 1.wav
/tmp/mutagen/test/import/import_test/10/import_test message name 2.wav
/tmp/mutagen/test/import/import_test/10/import_test music name 3.wav
/tmp/mutagen/test/import/import_test/11/import_test message name 1.wav
/tmp/mutagen/test/import/import_test/11/import_test music name 1.wav
/tmp/mutagen/test/import/import_test/11/import_test music name 3.wav
",
}
`;

exports[`[mutagen audio import] should import messages and audio files: number of messages imported 1`] = `
Object {
  "stderr": "",
  "stdout": "Imported 5 messages.
",
}
`;

exports[`[mutagen audio import] should import messages and audio files: re-export of the csv file 1`] = `
Object {
  "stderr": "",
  "stdout": "name,type,description,messageArId,tenantId,10,11
\\"import_test music name 1\\",MUSIC,\\"this is the description for music name 1\\",<removed-for-testing-purposes>,1,,\\"11/import_test music name 1.wav\\"
\\"import_test message name 1\\",ANNOUNCEMENT,\\"this is the description for message name 1\\",<removed-for-testing-purposes>,1,\\"10/import_test message name 1.wav\\",\\"11/import_test message name 1.wav\\"
\\"import_test music name 2\\",MUSIC,\\"this is the description for music name 2\\",<removed-for-testing-purposes>,1,,
\\"import_test message name 2\\",ANNOUNCEMENT,\\"this is the description for message name 2\\",<removed-for-testing-purposes>,1,\\"10/import_test message name 2.wav\\",
\\"import_test music name 3\\",MUSIC,\\"this is the description for music name 3\\",<removed-for-testing-purposes>,1,\\"10/import_test music name 3.wav\\",\\"11/import_test music name 3.wav\\"
",
}
`;

exports[`[mutagen audio import] should print usage when file to import is not specified: import usage 1`] = `
Object {
  "stderr": "",
  "stdout": "Missing required parameter: inputFile
Usage: import [-?] inputFile
Import audio files in ARM
      inputFile               Input audio description file.
  -?, -h, --help              Show this help message.
",
}
`;

exports[`[mutagen audio import] should validate duplicated messages: duplicated messages 1`] = `
Object {
  "stderr": "Audio import failed: the following messages' names already exist on the gax server
import_test music name 1
import_test message name 1
import_test music name 2
import_test message name 2
import_test music name 3
",
  "stdout": "",
}
`;
